[package]
name = "circle-plonk"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = "0.5.0-alpha.0"
stwo-prover = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/stwo", branch = "dev" }

[dev-dependencies]
ark-algebra-test-templates = "0.5.0-alpha.0"
ark-serialize = "0.5.0-alpha.0"
ark-std = "0.5.0-alpha.0"