[package]
name = "circle-plonk"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = "0.5.0-alpha.0"
ark-relations = "0.5.0-alpha.0"
stwo-prover = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/stwo", branch = "dev" }
byteorder = "^1.5.0"
ark-serialize = "0.5.0-alpha.0"
ark-std = "0.5.0-alpha.0"
ark-circom = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/circom-compat", branch = "release-0.5" }

[dev-dependencies]
ark-algebra-test-templates = "0.5.0-alpha.0"
ark-bn254 = "0.5.0-alpha.0"
ark-r1cs-std = "0.5.0-alpha.0"
rand_chacha = "0.3.1"
ark-serialize = "0.5.0-alpha.0"
ark-std = "0.5.0-alpha.0"